exports[`test A standard order 1`] = `
<li
  className="bVHbHQ">
  <span
    className="fzFUVW">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fMqdCr">
    MOOIE 456 TEST
  </span>
  <span
    className="bUWWSs">
    <div>
       
      <div>
         
        Name of the product
         
      </div>
      <div>
         
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="eVMaxZ">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="jLVzCR">
    completed
  </span>
  <span
    className="bRJYKR">
    <a
      aria-label="Download invoice"
      className="bsjHFt"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="bVHbHQ">
  <span
    className="fzFUVW">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fMqdCr">
    MOOIE 456 TEST
  </span>
  <span
    className="bUWWSs">
    <div>
       
      <div>
         
        Name of the product
         
      </div>
      <div>
         
        Another product
         
      </div>
       
    </div>
  </span>
  <span
    className="eVMaxZ">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="jLVzCR">
    pending
  </span>
  <span
    className="bRJYKR">
    <button
      aria-label="Download invoice"
      className="wmLcN eafvcs"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
